additional changes to make right

--- a/professional.html
+++ b/professional.html
@@ -79,7 +79,7 @@
 					<li>Beta Gamma Sigma International Business Honor Society, Admittance based on GPA</li>
 					<li>University of Iowa Old Gold Scholarship, Merit scholarship based on ACT and GPA</li>
 				</ul>
-				<h3>Professional Images</h3>
+				<h3>Professional Photos</h3>
 				<p><img src="assets/images/PledgeFamily.jpeg" alt=""></p>
 				<p><img src="assets/images/AlexRyan.jpeg" alt=""></p>
 				<p><img src="assets/images/grad1.jpg" alt=""></p>
